syntax = "proto3";

package manager;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "manager_department.proto";
import "manager_role.proto";
import "manager_user.proto";

message UserRole {
  uint32 user_id = 1;
  uint32 role_id = 2;
  Role role = 3;
  User user = 4;
}

message GetUserRolesRequest{
  uint32 user_id = 1[(validate.rules).uint32 = {gt:0}];
}

message GetUserRolesReply{
  repeated UserRole user_role = 1;
}

message SwitchCurrentUserRoleRequest{
  uint32 role_id = 1[(validate.rules).uint32 = {gt:0}];
}

message SwitchCurrentUserRoleReply{
  string token = 1;
}
